demos/headlamp/headlamp-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: headlamp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: headlamp.mb.scalefactory.net
spec:
  ingressClassName: alb
  #tls:
  #  - hosts:
  #    - headlamp.mb.scalefactory.net
  rules:
    - host: headlamp.mb.scalefactory.net
      http:
        paths:
          - path: /
            pathType: Prefix #ImplementationSpecific
            backend:
              service:
                name: headlamp
                port:
                  number: 80
